deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lms-prod
  labels:
    app: enable-lms
    environment: production
